[package]
name = "aarch64-rt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Startup code for aarch64 Cortex-A processors."
authors = ["Andrew Walbran <qwandor@google.com>"]
keywords = ["arm", "aarch64", "cortex-a"]
categories = ["embedded", "no-std"]

[dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
aarch64-paging = { version = "0.8.0", default-features = false }
pl011-uart = "0.1.0"
smccc = "0.1.1"

[features]
default = ["el1", "exceptions", "initial-pagetable"]
el1 = []
exceptions = []
initial-pagetable = []
