[package]
name = "aarch64-rt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Startup code and exception vector for aarch64 Cortex-A processors."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/aarch64-rt"
keywords = ["arm", "aarch64", "cortex-a"]
categories = ["embedded", "no-std"]

[dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
aarch64-paging = { version = "0.8.1", default-features = false }
arm-pl011-uart = "0.2.0"
smccc = "0.1.1"

[features]
default = ["el1", "exceptions", "initial-pagetable"]
el1 = []
el2 = []
el3 = []
exceptions = []
initial-pagetable = []

[package.metadata.docs.rs]
default-target = "aarch64-unknown-none"
