[package]
name = "aarch64-rt"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Startup code and exception vector for aarch64 Cortex-A processors."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/aarch64-rt"
keywords = ["arm", "aarch64", "cortex-a"]
categories = ["embedded", "no-std"]

[dependencies]
cfg-if = "1.0.0"
smccc = { version = "0.2.1", optional = true }

[dev-dependencies]
aarch64-paging = { version = "0.9.1", default-features = false }
arm-pl011-uart = "0.3.1"
smccc = "0.2.1"

[features]
default = ["el1", "exceptions", "initial-pagetable", "psci"]
el1 = []
el2 = []
el3 = []
exceptions = []
initial-pagetable = []
psci = ["dep:smccc"]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-none"
